--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -2,6 +2,8 @@
 # vars file for prometheus
 
 node_exporter_version: 0.18.1-1.el7
+prometheus_gitlab_ci_pipelines_exporter_tags: 0.3.1
+prometheus_gitlab_ci_pipelines_exporter_token: ""
 
 prometheus_binary_dir: /usr/local/bin
 prometheus_config_dir: /etc/prometheus
