--- a/roles/prometheus/tasks/gitlab_ci_pipelines_exporter.yml
+++ b/roles/prometheus/tasks/gitlab_ci_pipelines_exporter.yml
@@ -15,28 +15,21 @@
     name: mvisonneau/gitlab-ci-pipelines-exporter
     tag: "{{ prometheus_gitlab_ci_pipelines_exporter_tags }}"
 
-- name: Stop prometheus container
+- name: Stop gitlab_ci_pipelines_exporter container
   docker_container:
-    name: prometheus
+    name: gitlab_ci_pipelines_exporter
     state: absent
 
-- name: Start prometheus container
+- name: Start gitlab_ci_pipelines_exporter container
   docker_container:
-    name: prometheus
-    image: "prom/prometheus:{{ prometheus_docker_tags }}"
+    name: gitlab_ci_pipelines_exporter
+    image: "mvisonneau/gitlab-ci-pipelines-exporter:{{ prometheus_gitlab_ci_pipelines_exporter_tags }}"
     state: started
     command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-      - "--storage.tsdb.path=/prometheus"
-      - "--web.console.libraries=/usr/share/prometheus/console_libraries"
-      - "--web.console.templates=/usr/share/prometheus/consoles"
-      - "--web.external-url={{ prometheus_url | default('http://'+ansible_default_ipv4.address+':9090') }}"
-    user: root
+      - "--config /etc/config.yml"
     restart: yes
     restart_policy: on-failure
     ports:
-     - "9090:9090"
+     - "8080:8080"
     volumes:
-      - "{{ prometheus_config_dir }}:/etc/prometheus:ro"
-      - "/etc/hosts:/etc/hosts:ro"
-      - "{{ prometheus_data_dir }}:/prometheus"
+      - "/etc/gitlab_ci_pipelines_exporter.yml:/etc/config.yml:ro"
