ST-324 - add prometheus config for exporter

--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -106,6 +106,11 @@ prometheus_scrape_configs:
           - "192.168.93.208:9090" #controller1-1
           - "192.168.93.209:9090" #controller1-2
 
+  - job_name: "gitlab_ci_pipelines_exporter"
+    static_configs:
+      - targets:
+          - "{{ ansible_fqdn | default(ansible_host) | default('localhost') }}:8080"
+
   - job_name: "node"
     static_configs:
     - targets:
