ST-324 - fix up templating for DS_PROMETHEUS, and grafana plugins

--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -38,6 +38,7 @@ grafana_dashboard_files:
 grafana_plugins:
   - vonage-status-panel
   - grafana-piechart-panel
+  - grafana-polystat-panel
 
 # Alert Manager
 # slack_api_url has to be set in the command line
