Fix node_exporter deploy - new role

--- a/deploy_node_exporter.yml
+++ b/deploy_node_exporter.yml
@@ -5,5 +5,5 @@
   become: true
   become_method: sudo
   become_flags: '-E -S -n'
-  tasks:
-    - include: roles/prometheus/tasks/node_exporter.yml
+  roles:
+    - node_exporter
