Fix node_exporter deploy -  role conditional

--- a/deploy_node_exporter.yml
+++ b/deploy_node_exporter.yml
@@ -2,6 +2,8 @@
 
 - name: deploy_node_exporter
   hosts: nodexporter
+  vars:
+    mode: "exporter"
   become: true
   become_method: sudo
   become_flags: '-E -S -n'
