--- a/roles/prometheus/tasks/grafana_gitlab_runners.yml
+++ b/roles/prometheus/tasks/grafana_gitlab_runners.yml
@@ -15,8 +15,7 @@
     src: "{{ role_path }}/files/dashboards/gitlab-runners/{{ item }}"
     dest: "/etc/grafana/provisioning/dashboards/gitlab-runners-dashboard/{{ item }}"
   with_items:
-    - simple.json
-    - gitlab-runner-service_rev2.json
+    - gitlab-runner-simple.json
     - gitlab-ci-pipelines-statuses_rev1.json
 
 - name: gitlab-runners Write dashboards provisioning config file
