[ST-324] add alarm on pending jobs

--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -259,3 +259,11 @@ prometheus_alert_rules:
   annotations:
     description: "{% raw %} Container {{ $labels.container }} of pod {{ $labels.kubernetes_pod_name }} in namespace {{ $labels.kubernetes_namespace }} keeps restarting.{% endraw %}"
     summary: "{% raw %}Container {{ $labels.container }} - Too many restarts{% endraw %}"
+- alert: PendingJobs
+  expr: 'gitlab_runner_jobs{state="pending"} > 0'
+  for: 10m
+  labels:
+    severity: critical
+  annotations:
+    description: "{% raw %}{{ $labels.instance }} of job {{ $labels.job }} has pending jobs for more than 5 minutes..{% endraw %}"
+    summary: "{% raw %}Instance {{ $labels.instance }} - Gitlab runner pending jobs{% endraw %}"
