prepare for pyhelm

--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -12,6 +12,19 @@
   loop_control:
     loop_var: docker_vars
 
+- name: install pip and dev dependencies
+  become: true
+  apt:
+    pkg:
+      - python-pip # TODO: In the future the all playbook must use Python 3
+    state: present
+
+- name: install pyhelm and dependencies
+  pip:
+    name:
+      - pyhelm
+    state: present
+
 - name: Install conntrack package ## Requirement for Kubernetes 1.18 +
   apt:
     name: conntrack
@@ -221,6 +234,19 @@
       shell:
         if ! helm list -n kube-system | grep -q traefik0; then \
         helm install traefik0 stable/traefik --namespace=kube-system --set externalIP={{ansible_default_ipv4.address}}; fi
+    
+    # - name: Install traefik
+    #   helm:
+    #     chart:
+    #       name: traefik
+    #       source:
+    #         type: repo
+    #         location: "{{ helm_stable_repo_url }}"
+    #     state: present
+    #     name: traefik0
+    #     namespace: kube-system
+    #     values:
+    #       externalIP: "{{ ansible_default_ipv4.address }} "
   when: "not minikube_use_nginx"
 
 # https://github.com/kubernetes/kube-state-metrics/tree/master/examples/standard
