--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -29,6 +29,7 @@ use_nginx: false
 # Minikube and kvm2 source
 minikube_mirror: https://github.com/kubernetes/minikube/releases/download
 minikube_install_dir: /usr/local/bin
+minikube_binaries_dir: "/var/lib/minikube/binaries/{{ k8s_version }}"
 
 # vars for kvm2
 minikube_kvm2_name: docker-machine-driver-kvm2
