--- a/roles/prometheus/files/rules/kubernetes/prometheus_alerts.yaml
+++ b/roles/prometheus/files/rules/kubernetes/prometheus_alerts.yaml
@@ -519,8 +519,10 @@
     "annotations":
       "message": "Kubelet Pod startup 99th percentile latency is {{ $value }} seconds on node {{ $labels.node }}."
       "runbook_url": "https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubeletpodstartuplatencyhigh"
+#    "expr": |
+#      histogram_quantile(0.99, sum(rate(kubelet_pod_worker_duration_seconds_bucket{job="kubelet"}[5m])) by (instance, le)) * on(instance) group_left(node) kubelet_node_name  > 60
     "expr": |
-      histogram_quantile(0.99, sum(rate(kubelet_pod_worker_duration_seconds_bucket{job="kubelet"}[5m])) by (instance, le)) * on(instance) group_left(node) kubelet_node_name  > 60
+      histogram_quantile(0.99, sum(rate(kubelet_pod_worker_duration_seconds_bucket{job="kubelet"}[5m])) by (instance, le)) > 60
     "for": "15m"
     "labels":
       "severity": "warning"
