--- a/deploy_docker_exporter.yml
+++ b/deploy_docker_exporter.yml
@@ -1,9 +1,11 @@
----
 
+---
 - name: deploy_docker_exporter
   hosts: alldocker
+  vars:
+    mode: "docker"
   become: true
   become_method: sudo
   become_flags: '-E -S -n'
-  tasks:
-    - include: roles/prometheus/tasks/docker_exporter.yml
+  roles:
+    - prometheus
