--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -8,19 +8,19 @@
       - python3-requests
     state: present
     update_cache: yes
-  when: mode == "server" or mode == "all"
+  when: mode == "server" or mode == "all" or mode == "docker"
 
 - name: Download get-pip.py
   get_url:
     url: https://bootstrap.pypa.io/get-pip.py
     dest: /tmp/get-pip.py
     mode: '0744'
-  when: mode == "server" or mode == "all"
+  when: mode == "server" or mode == "all" or mode == "docker"
 
 - name: get-pip # noqa 301 Commands should not change things if nothing needs doing
   shell: |
     python3 /tmp/get-pip.py
-  when: mode == "server" or mode == "all"
+  when: mode == "server" or mode == "all" or mode == "docker"
 
 - name: install certain python modules for docker
   pip:
@@ -33,7 +33,7 @@
   - { name: python-novaclient, version: 2.27.0 }
   - { name: rackspace-novaclient, version: 2.1 }
   - { name: python-heatclient, version: 2.0.0 }
-  when: mode == "server" or mode == "all"
+  when: mode == "server" or mode == "all" or mode == "docker"
 
 - include: blackbox_exporter.yml
   when: mode == "server" or mode == "all"
@@ -41,16 +41,8 @@
 - include: runner_exporter.yml
   when: mode == "runner"
 
-- name: Check if docker prometheus exporter is already set
-  wait_for:
-    port: 9323
-    timeout: 3
-  register: check_port
-  ignore_errors: true
-  when: mode == "docker"
-
 - include: docker_exporter.yml
-  when: mode == "docker" and check_port.failed
+  when: mode == "docker"
 
 - include: grafana_ceph.yml
   when: mode == "server" or mode == "all"
