[ST-369] add relabel for docker cadvisor

--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -234,6 +234,7 @@ prometheus_scrape_configs:
     file_sd_configs:
     - files:
       - 'docker_cadvisor.json'
+    metric_relabel_configs: "{{ prometheus_static_node_metric_relabel_configs + elasticsearch_instance_add_cluster_label + prometheus_node_metric_relabel_configs }}"
 
   - job_name: "kube-state-metrics"
     file_sd_configs:
