[ST-369] add alerts dashboard

--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -65,6 +65,9 @@
 - include: gitlab_ci_pipelines_exporter.yml
   when: mode == "server" or mode == "all"
 
+- include: grafana_alerts.yml
+  when: mode == "server" or mode == "all"
+
 # launch prom/alert/grafana after configuration
 - include: server.yml
   when: mode == "server" or mode == "all"
