--- a/roles/node_exporter/vars/main.yml
+++ b/roles/node_exporter/vars/main.yml
@@ -5,11 +5,17 @@ node_exporter_version: 0.18.1-1.el7
 prometheus_gitlab_ci_pipelines_exporter_tags: 0.3.1
 prometheus_gitlab_ci_pipelines_exporter_token: ""
 
+node_exporter_apt_package: http://archive.ubuntu.com/ubuntu/pool/universe/p/prometheus-node-exporter/prometheus-node-exporter_0.18.1+ds-2_amd64.deb
+
 prometheus_binary_dir: /usr/local/bin
 prometheus_config_dir: /etc/prometheus
 prometheus_data_dir: /prometheus
 prometheus_node_metric_relabel_configs: []
 elasticsearch_instance_add_cluster_label:
+  - regex: '^192\.168\.93\.(94|96|112):(\d+)'
+    replacement: ska-systems1
+    source_labels: [instance]
+    target_label: cluster
   - regex: '^192\.168\.93\.(94|96|112):(\d+)'
     replacement: ska-systems1
     source_labels: [instance]
