--- a/roles/prometheus/tasks/docker_exporter.yml
+++ b/roles/prometheus/tasks/docker_exporter.yml
@@ -88,7 +88,7 @@
         state: started
         user: root
         restart: yes
-        restart_policy: on-failure
+        restart_policy: always
         ports:
         - "9324:8080"
         volumes:
