--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -144,7 +144,8 @@ alerts_inhibit_rules: []
 # can only do one cluster - v1
 k8s_api_server_addr: "192.168.93.102"
 k8s_api_server_port: "6443"
-k8s_api_server: "https://{{ k8s_api_server_addr }}:{{ k8s_api_server_port }}"
+k8s_api_server: ""
+#k8s_api_server: "https://{{ k8s_api_server_addr }}:{{ k8s_api_server_port }}"
 k8s_certificate_authority: ""
 k8s_client_certificate: ""
 k8s_client_key: ""
