--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -17,7 +17,9 @@ minikube_platform: linux-amd64
 
 # vars file for minikube
 minikube_exe: minikube-{{ minikube_platform }}{{ minikube_exe_suffix|default("") }}
+minikube_deb: minikube_{{ minikube_version[1:] }}-0_amd64.deb
 minikube_url: '{{ minikube_mirror }}/{{ minikube_version }}/{{ minikube_exe }}'
+minikube_deb_url: '{{ minikube_mirror }}/{{ minikube_version }}/{{ minikube_deb }}'
 minikube_install_target: '{{ minikube_install_dir }}/{{ minikube_exe }}-{{ minikube_version }}'
 
 # kubectl vars
