fixed centos and simplified logic

--- a/roles/minikube/tasks/main.yml
+++ b/roles/minikube/tasks/main.yml
@@ -12,22 +12,13 @@
   loop_control:
     loop_var: docker_vars
 
-- name: Gather the os package facts
-  package_facts:
-    manager: auto
-
-- name: uninstall minikube if needed (Debian)
-  apt:
-    name: minikube
-    state: absent
-  when: "ansible_os_family == 'Debian' and 'minikube' in ansible_facts.packages and ansible_facts.packages['minikube'][0].version != minikube_version[1:]"
-
 - name: install minikube (Debian)
   apt:
     deb: '{{ minikube_deb_url }}'
+    force: yes
   when: "ansible_os_family == 'Debian'"
 
-- name: install minikube (Dawin)
+- name: install minikube (Darwin)
   homebrew:
     name: 'minikube@{{ minikube_version[1:] }}'
     state: present
@@ -37,4 +28,5 @@
   yum:
     name: '{{ minikube_rpm_url }}'
     state: present
+    allow_downgrade: yes
   when: "ansible_os_family == 'RedHat'"
