ST-388 - fix up restart policy

--- a/roles/prometheus/tasks/alert_manager.yml
+++ b/roles/prometheus/tasks/alert_manager.yml
@@ -42,7 +42,7 @@
     state: started
     user: root
     restart: yes
-    restart_policy: on-failure
+    restart_policy: always
     ports:
      - "9093:9093"
     volumes:
