--- a/roles/prometheus/tasks/grafana.yml
+++ b/roles/prometheus/tasks/grafana.yml
@@ -46,7 +46,7 @@
     state: started
     user: root
     restart: yes
-    restart_policy: on-failure
+    restart_policy: always
     ports:
      - "3000:3000"
     volumes:
