--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -176,9 +176,11 @@
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--storage.tsdb.path=/prometheus"
       - "--web.console.libraries=/usr/share/prometheus/console_libraries"
+      - "--web.page-title='{{ prometheus_title }}'"
       - "--web.console.templates=/usr/share/prometheus/consoles"
       - "--web.external-url={{ prometheus_url | default('http://'+ansible_default_ipv4.address+':9090') }}"
     user: root
+    memory: "{{ prometheus_memory }}"
     restart: yes
     restart_policy: always
     ports:
