ST-377 Fixed warning about invalid group names

--- a/join_cluster.yaml
+++ b/join_cluster.yaml
@@ -1,13 +1,13 @@
 ---
 - name: Setup worker node
-  hosts: kubernetes-worker-nodes
+  hosts: kubernetes_worker_nodes
   become: yes
   tasks:
     - include: roles/k8s/tasks/openstack_prerequisites.yml
     - include: roles/k8s/tasks/setting_up_nodes.yml
 
 - name: Join to the cluster
-  hosts: kubernetes-worker-nodes kubernetes-master-nodes
+  hosts: kubernetes_worker_nodes kubernetes_master_nodes
   become: yes
   tasks:
     - include: roles/k8s/tasks/configure_worker_nodes.yml
